--- a/app/page.css
+++ b/app/page.css
@@ -59,7 +59,6 @@
   justify-content: center;
   text-align: center;
   padding: 0;
-  margin: 0 auto;
   width: 100%;
 }
 .stat-item {
